show accounts for ambulances and doctors which you are added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,18 @@
     <string name="not_found_any_accounts">Not Found Any Accounts</string>
     <string name="ambulances">Ambulances</string>
     <string name="doctors">Doctors</string>
+    <string name="add_accounts">add Accounts</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="sign_in">Sign in</string>
+    <string name="welcome">"Welcome ! "</string>
+    <string name="welcome_sign_in">"Welcome ! \n please Sign in to continue "</string>
+
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="email">email</string>
+    <string name="register">Register</string>
 </resources>
