--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,26 +38,46 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="amit_kumar">Amit Kumar</string>
-        <string name="username">amitthecoder</string>
-        <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
-        <string name="profile">Profile</string>
-        <string name="about">About</string>
-        <string name="user_information">User Information</string>
-        <string name="username_">Username</string>
-        <string name="amitthecoder">amitthecoder</string>
-        <string name="gender">Gender</string>
-        <string name="male">Male</string>
-        <string name="age">Age</string>
-        <string name="_21">21</string>
-        <string name="date_of_birth">Date of Birth</string>
-        <string name="_07_02_2003">07/02/2003</string>
-        <string name="mobile">Mobile</string>
-        <string name="_91_9000000009">+91 9000000009</string>
-        <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
-        <string name="social_media">Social Media</string>
+    <string name="username">amitthecoder</string>
+    <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
+    <string name="profile">Profile</string>
+    <string name="about">About</string>
+    <string name="user_information">User Information</string>
+    <string name="username_">Username</string>
+    <string name="amitthecoder">amitthecoder</string>
+    <string name="gender">Gender</string>
+    <string name="male">Male</string>
+    <string name="age">Age</string>
+    <string name="_21">21</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="_07_02_2003">07/02/2003</string>
+    <string name="mobile">Mobile</string>
+    <string name="_91_9000000009">+91 9000000009</string>
+    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
+    <string name="social_media">Social Media</string>
     <string name="edit_profile">edit Profile</string>
     <string name="change_image">Change Image</string>
     <string name="hospital_profile">Hospital Profile</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="about_us">About Us</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="log_out">Log Out</string>
+    <string name="add_blood">add blood</string>
+    <string name="nursery_cd">nursery CD</string>
+    <string name="blood_cd">blood CD</string>
+    <string name="room_cd">room CD</string>
+    <string name="home_image">home image</string>
+    <string name="blood_type">blood type</string>
+    <string name="quantity">quantity</string>
+    <string name="unit">Unit</string>
+    <string name="blood_bank">Blood Bank</string>
+    <string name="select_type">Select type</string>
+    <string name="enter_quantity">enter quantity</string>
+    <string name="delete_blood">delete blood</string>
+    <string name="are_you_confirm_to_delete_this_blood_bag">are you confirm to delete this blood bag</string>
+    <string name="confirm">confirm</string>
+    <string name="delete">delete</string>
+    <string name="edit_blood_bag">Edit Blood Bag</string>
+    <string name="add_blood_bag">Add Blood Bag</string>
 </resources>
