--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="are_you_confirm_to_delete_this_room">are you confirm to delete this room</string>
     <string name="number_of_room">number of room</string>
     <string name="add_room">add room</string>
+    <string name="are_you_want_to_delete_this_item">Are you want to delete this item</string>
 </resources>
