--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,13 +38,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="amit_kumar">Amit Kumar</string>
-    <string name="username">amitthecoder</string>
+    <string name="amitthecoder">amitthecoder</string>
     <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
     <string name="profile">Profile</string>
     <string name="about">About</string>
     <string name="user_information">User Information</string>
     <string name="username_">Username</string>
-    <string name="amitthecoder">amitthecoder</string>
     <string name="gender">Gender</string>
     <string name="male">Male</string>
     <string name="age">Age</string>
@@ -55,7 +54,6 @@
     <string name="_91_9000000009">+91 9000000009</string>
     <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
     <string name="social_media">Social Media</string>
-    <string name="edit_profile">edit Profile</string>
     <string name="change_image">Change Image</string>
     <string name="hospital_profile">Hospital Profile</string>
     <string name="save">Save</string>
@@ -106,8 +104,6 @@
     <string name="logo">logo</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
-    <string name="phone">Phone Number</string>
-    <string name="national_id">National ID</string>
     <string name="specialty">Specielity</string>
     <string name="license_number">License Number</string>
     <string name="hospital_id">Hospital ID</string>
@@ -147,11 +143,16 @@
     <string name="sample_vehicle_number">Vehicle No: AMB-123</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="ambulance_info">Ambulance Info</string>
-    <string name="username">Username</string>
     <string name="national_id">National ID</string>
-    <string name="email">Email</string>
+
     <string name="phone">Phone</string>
     <string name="sample_status">Available</string>
     <string name="doctor_profile">Doctor Profile</string>
+    <string name="notification_btn">notification btn</string>
+    <string name="link_not_found">Link not found</string>
+    <string name="not_any_app_found_to_open_this_link">not any app found to open this link</string>
+    <string name="hospital_details">Hospital Details</string>
+    <string name="established_date">Established Date</string>
+    <string name="manage_your_hospital_information">Manage your hospital information</string>
 
 </resources>
