--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -44,6 +44,7 @@
     <string name="user_information">معلومات المستخدم</string>
     <string name="username_">اسم المستخدم</string>
     <string name="gender">الجنس</string>
+
     <string name="male">ذكر</string>
     <string name="age">العمر</string>
     <string name="_21">21</string>
@@ -55,6 +56,7 @@
     <string name="social_media">وسائل التواصل</string>
     <string name="change_image">تغيير الصورة</string>
     <string name="hospital_profile">الملف الشخصي للمستشفى</string>
+
     <string name="save">حفظ</string>
     <string name="cancel">إلغاء</string>
     <string name="about_us">من نحن</string>
@@ -66,6 +68,7 @@
     <string name="room_cd">CD غرفة</string>
     <string name="home_image">صورة الصفحة الرئيسية</string>
     <string name="blood_type">فصيلة الدم</string>
+
     <string name="quantity">الكمية</string>
     <string name="unit">الوحدة</string>
     <string name="blood_bank">بنك الدم</string>
@@ -76,6 +79,7 @@
     <string name="confirm">تأكيد</string>
     <string name="delete">حذف</string>
     <string name="edit_blood_bag">تعديل كيس الدم</string>
+
     <string name="add_blood_bag">إضافة كيس دم</string>
     <string name="emergency_rooms">غرف الطوارئ</string>
     <string name="status">الحالة</string>
@@ -85,6 +89,7 @@
     <string name="are_you_confirm_to_delete_this_room">هل أنت متأكد من حذف هذه الغرفة؟</string>
     <string name="number_of_room">عدد الغرف</string>
     <string name="add_room">إضافة غرفة</string>
+
     <string name="are_you_want_to_delete_this_item">هل ترغب في حذف هذا العنصر؟</string>
     <string name="email_or_password_is_incorrect">البريد أو كلمة المرور غير صحيحة.</string>
     <string name="you_are_not_authorized_to_log_in">أنت غير مصرح لك بتسجيل الدخول.</string>
@@ -97,6 +102,7 @@
     <string name="enter_service_price">أدخل سعر الخدمة</string>
     <string name="enter_service_description">أدخل وصف الخدمة</string>
     <string name="sign_up">إنشاء حساب</string>
+
     <string name="create_a_new_doctor_account">إنشاء حساب طبيب جديد</string>
     <string name="confirm_password">تأكيد كلمة المرور</string>
     <string name="user_name">اسم المستخدم</string>
@@ -107,6 +113,7 @@
     <string name="license_number">رقم الرخصة</string>
     <string name="hospital_id">معرّف المستشفى</string>
     <string name="doctor_register_succefully">تم تسجيل الطبيب بنجاح</string>
+
     <string name="ambulance_register_succefully">تم تسجيل سيارة الإسعاف بنجاح</string>
     <string name="create_a_new_ambulance_account">إنشاء حساب سيارة إسعاف جديد</string>
     <string name="vehicle_number">رقم المركبة</string>
@@ -116,6 +123,7 @@
     <string name="password_is_required">كلمة المرور مطلوبة</string>
     <string name="password_must_be_at_least_8_characters">يجب أن تكون كلمة المرور 8 أحرف على الأقل</string>
     <string name="passwords_don_t_match">كلمات المرور لا تتطابق</string>
+
     <string name="first_name_is_required">الاسم الأول مطلوب</string>
     <string name="last_name_is_required">اسم العائلة مطلوب</string>
     <string name="gender_is_required">الجنس مطلوب</string>
@@ -125,6 +133,7 @@
     <string name="vehicle_number_required">رقم المركبة مطلوب</string>
     <string name="tog_bar">شريط التبديل</string>
     <string name="can_you_confirm_logout">هل تريد تأكيد تسجيل الخروج؟</string>
+
     <string name="save_changes">حفظ التغييرات</string>
     <string name="website">الموقع الإلكتروني</string>
     <string name="some_thing_go_wrong">حدث خطأ ما</string>
@@ -181,6 +190,7 @@
     <string name="who_we_are">من نحن</string>
     <string name="to_develop_tech_applications_and_projects_that_serve_the_community_share_knowledge_with_fellow_students_and_solve_real_world_problems_using_science_and_technology">تطوير تطبيقات تقنية ومشاريع تخدم المجتمع، ومشاركة المعرفة مع الزملاء، وحل مشاكل العالم الحقيقي باستخدام العلم والتكنولوجيا.</string>
     <string name="our_vision">رؤيتنا</string>
+
     <string name="our_mission">مهمتنا</string>
     <string name="we_are_a_group_of_passionate_students_at_the_faculty_of_science_beni_suef_university_striving_to_develop_our_technical_skills_and_provide_innovative_solutions_we_believe_in_the_power_of_science_and_technology_to_improve_people_s_lives_and_build_a_better_future">نحن مجموعة من الطلاب المتحمسين في كلية العلوم بجامعة بني سويف نسعى لتطوير مهاراتنا التقنية وتقديم حلول مبتكرة. نؤمن بقوة العلم والتكنولوجيا في تحسين حياة الناس وبناء مستقبل أفضل.</string>
     <string name="we_are_excited_to_collaborate_with_others_and_share_our_knowledge_if_you_have_a_project_or_idea_you_d_like_to_discuss_with_us_don_t_hesitate_to_get_in_touch">نحن متحمسون للتعاون مع الآخرين ومشاركة معرفتنا. إذا كان لديك مشروع أو فكرة ترغب في مناقشتها معنا، فلا تتردد في التواصل!</string>
@@ -188,6 +198,7 @@
     <string name="privacy_security">الخصوصية والأمان</string>
     <string name="customize_your_experience">خصص تجربتك</string>
     <string name="push_notifications">الإشعارات الفورية</string>
+
     <string name="receive_alerts_and_updates">تلقي التنبيهات والتحديثات</string>
     <string name="dark_mode">الوضع الداكن</string>
     <string name="switch_to_dark_theme">تبديل إلى السمة الداكنة</string>
@@ -195,8 +206,32 @@
     <string name="current_requests">الطلبات الحالية</string>
     <string name="completed_requests">الطلبات المكتملة</string>
     <string name="cancelled_requests">الطلبات الملغاة</string>
+
     <string name="confirmed_requests">الطلبات المؤكدة</string>
     <string name="pending_requests">الطلبات المعلقة</string>
     <string name="all_requests">كل الطلبات</string>
+    <string name="quantity_request">الكمية:</string>
+    <string name="complete">اكتمل</string>
+    <string name="doctor_details">تفاصيل الطبيب</string>
+    <string name="manage_your_doctor_information">إدارة معلومات الطبيب الخاص بك</string>
+    <string name="how_can_we_help_you">كيف يمكننا مساعدتك؟</string>
+
+    <string name="hospital_manager">مدير المستشفى</string>
+    <string name="go_to_location">اذهب إلى الموقع</string>
+    <string name="arrived_time">وقت الوصول:</string>
+    <string name="head_north">اتجه شمالاً</string>
+    <string name="turn_right">انعطف يمينًا →</string>
+    <string name="u_turn">انعطف للخلف ↓</string>
+    <string name="turn_left">انعطف يسارًا ←</string>
+
+    <string name="go_straight">تابع السير ↑</string>
+    <string name="skip_for_now">تخطي</string>
+    <string name="welcome_subtitle">مرحبًا!</string>
+    <string name="get_started">ابدأ الآن</string>
+    <string name="already_have_account">لديك حساب بالفعل</string>
+    <string name="welcome_doctor">مرحبًا دكتور!</string>
+    <string name="description">الوصف</string>
+    <string name="not_found_any_items">لم يتم العثور على أي عناصر</string>
+    <string name="welcome_ambulance">مرحبًا بسيارة الإسعاف!</string>
 
 </resources>
